<resources>
    <string name="app_name">ProHub</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login2">LOGIN</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="action_search">Search</string>
    <string name="title_activity_enable2_fa">enable2FAActivity</string>
    <string name="fullName">Full Name</string>
    <string name="sentDate">Send Date</string>
    <string name="lastMessage">Last Message</string>

    <!--Property Strings-->
    <string name="property_welcome">Welcome Lessor</string>
    <string name="new_property_h2">Create new Property</string>
    <string name="new_unit_h2">Create new Unit</string>
    <string name="property_Name">Name</string>
    <string name="unit_Name">Unit Name</string>
    <string name="street_line1">Street Line 1</string>
    <string name="street_line2">Street Line 2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal">Postal Code</string>
    <string name="unit_tenant">Tenant Number</string>
    <string name="saveBtn">Save</string>
    <string name="create_news">Create News</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_the_6_digit_code_that_we_sent_to_your_phone_number">Enter the 3 or 4 -digit code that we sent to your phone number</string>
    <string name="to_finish_setting_up_two_factor_authentication">to finish setting up two-factor authentication.</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="you_typed_a_wrong_code_please_double_check">You typed a wrong code! Please double check!</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="news_title">News Title</string>
    <string name="enter_title_here">Enter Title Here</string>
    <string name="content">Content</string>
    <string name="enter_content_here">Enter Content Here</string>
    <string name="target_viewer">Target Viewer</string>
    <string name="everyone">Everyone</string>
    <string name="managements_only">Managements Only</string>
    <string name="hideTrue">True</string>
    <string name="hideFalse">False</string>
    <string name="hide">Hide</string>
    <string name="hide_news">Hide News</string>
    <string name="property_name">Property Name..</string>
    <string name="e_g_123_street_abc">e.g. 123 street abc..</string>
    <string name="e_g_suite_1001">e.g. suite 1001..</string>
    <string name="e_g_toronto">e.g. Toronto</string>
    <string name="e_g_a0a_0a0">e.g. A0A 0A0</string>
    <string name="send_message_chat">SEND</string>
    <string name="choose_a_security_method">Choose a security method</string>
    <string name="you_enabled_two_factor_authentication_on_this_account">You enabled two-factor authentication on this account.</string>
    <string name="text_message_2fa">Text Message</string>
    <string name="we_ll_send_a_code_to_your_phone_number_to_get_you_set_up">We\'ll send a code to your phone number to get you set up.</string>
    <string name="welcome_lessor_home">Welcome</string>
    <string name="list_of_your_properties">List of Your Properties</string>
    <string name="create_new_property">Create New Property</string>
    <string name="dashboard">Dashboard</string>
    <string name="chat_property_home">Chat</string>
    <string name="news_property_home">News</string>
    <string name="forms_property_home">Forms</string>
    <string name="settings_property_home">Settings</string>
    <string name="sign_up_reg">Sign Up</string>
    <string name="login_reg">Login</string>
    <string name="first_name_reg">First Name</string>
    <string name="last_name_reg">Last Name</string>
    <string name="phone_reg">Phone</string>
    <string name="password_reg">Password</string>
    <string name="confirm_password_reg">Confirm Password</string>
    <string name="confirm_gre">Confirm</string>
    <string name="prohub_title">ProHub</string>
    <string name="who_are_you">Who are you?</string>
    <string name="i_m_a_landlord">I\'m a landlord</string>
    <string name="i_m_a_tenant">I\'m a tenant</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="search_description">
        Please follow the following steps:\n\n
        1. Choose one of Chat, News or Form from the spinner.\n\n
        2. Enter inside the input box below the spinner what you want to search under the selected category (minimum 1 character required).\n\n
        3. Click one of the element appeared under the your inputted text. It will direct you to the desired search result.\n\n
        * Note 1: Chat, news and form can be searched by name, news title and form title, respectively.\n\n
        * Note 2: If you want to close this screen, hit back button located on the left bottom of your screen.
    </string>
    <string name="test_message">Test Message</string>
    <string name="john_doe">John Doe</string>
    <string name="test_message_sent">Test Message</string>
    <string name="john_doe_sent">John Doe</string>
    <string name="prohub_toolbar">ProHub</string>
    <string name="chat_toolbar">CHAT</string>
    <string name="news_toolbar">NEWS</string>
    <string name="forms_toolbar">FORMS</string>
    <string name="settings_toolbar">SETTINGS</string>
    <string name="go_property">Go Property</string>
    <string name="chat_seen">Seen</string>
    <!--Province Spinner-->
    <string-array name="provinces">
        <item>Choose Province!</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
    </string-array>
    <!--Search Filter Spinner-->
    <string-array name="search_filter">
        <item>Please select the section</item>
        <item>Chat</item>
        <item>News</item>
        <item>Form</item>
    </string-array>
    <string name="title_activity_view_news">ViewNewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="update_news">Update News</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="e_g_superintendent">e.g Superintendent</string>
    <string name="news_feed_list">News Feed List</string>
    <string name="property_name_1">Property Name</string>
    <string name="user_information">User Information</string>
    <string name="user_name">User Name</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number:</string>
    <string name="user_role">User Role:</string>
    <string name="_647_949_6506">647-949-6506</string>
    <string name="lessor_tv">Lessor</string>
    <string name="formtitle">formTitle</string>
    <string name="formDate">May 14, 2020, 4:43 PM</string>
    <string name="settings_image">settings image</string>
    <string name="view_chats">View all the chats</string>
    <string name="account_info">Account info, Password, Picture</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="staff_management_subtitle">Staff Management</string>
    <string name="staff_title">Staff</string>
</resources>
