<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewsActivity">

    <include layout="@layout/layout_toolbar"/>
    <TextView
        android:id="@+id/addNewsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_news"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        tools:context=".AddPropertyActivity">

        <EditText
            android:id="@+id/newsTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_title_here"/>

        <EditText
            android:id="@+id/newsContentInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="10"
            android:hint="@string/enter_content_here"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addNewsbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_input_add" />

            <ImageView
                android:id="@+id/addNewsImageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newsTargetTextView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/target_viewer"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/everyone" />

                <RadioButton
                    android:id="@+id/radioBtnManage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/managements_only" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newsHideTextView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/hide_news"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/hideTrue" />

                <RadioButton
                    android:id="@+id/radioBtnFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/hideFalse" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".AddPropertyActivity">

        <Button
            android:id="@+id/addNewsCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addNewsPostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/post" />

    </LinearLayout>
</LinearLayout>