<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">

    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_information"
        android:textAlignment="center"
        android:paddingBottom="10dp"
        android:textSize="24sp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserIconBtn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:src="@drawable/upload"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/user_name"/>
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_layout_border"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:padding="6dp"
                android:text="@string/phone_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:padding="6dp"
                android:text="@string/user_role" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tbUserPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="6dp"
                android:text="@string/_647_949_6506" />

            <TextView
                android:id="@+id/tvUserRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="6dp"
                android:text="@string/lessor_tv" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_layout_border"
        android:layout_margin="5dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:padding="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_password" />

        <EditText
            android:id="@+id/etCurrentPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="200dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"
        android:text="@string/save_changes" />

    </LinearLayout>

</LinearLayout>
</ScrollView>