<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:isScrollContainer="true"
    android:orientation="vertical">
    <include layout="@layout/layout_simple_toolbar"/>
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_layout_border"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login2"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtLoginPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_weight="0.10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:typeface="sans" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/rememberMe" />

        <ImageButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:src="@drawable/btn_main_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>