<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentInsetStart="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ImageButtonHome"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/logo_dark"
                android:translationX="15sp" />

            <TextView
                android:id="@+id/AppNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prohub_toolbar"
                android:textSize="25dp"
                android:textColor="@color/colorWhite"
                android:translationX="30sp"/>

            <ImageButton
                android:id="@+id/ImageButtonSearch"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/search"
                android:translationX="165sp" />

            <ImageButton
                android:id="@+id/ImageButtonMenu"
                android:layout_width="40sp"
                android:layout_height="50sp"
                android:background="@drawable/menu_three"
                android:onClick="exportChatHistory"
                android:translationX="170sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/toolbarBtnChat"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/toolbar_button_background"
                android:text="@string/chat_toolbar" />

            <Button
                android:id="@+id/toolbarBtnNews"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/toolbar_button_background"
                android:text="@string/news_toolbar" />

            <Button
                android:id="@+id/toolbarBtnForms"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/toolbar_button_background"
                android:text="@string/forms_toolbar" />

            <Button
                android:id="@+id/toolbarBtnSettings"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/toolbar_button_background"
                android:text="@string/settings_toolbar" />

        </LinearLayout>

    </LinearLayout>


</androidx.appcompat.widget.Toolbar>