<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationRoleActivity"
    android:orientation="vertical">
    <include layout="@layout/layout_simple_toolbar"/>
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_medium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/prohub_title"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/who_are_you"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLandlord"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            android:background="#586f7C"
            android:textColor="#FAFAFA"
            android:text="@string/i_m_a_landlord" />

        <Button
            android:id="@+id/btnTenant"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="#B8DBD9"
            android:textColor="#586f7C"
            android:text="@string/i_m_a_tenant" />

    </LinearLayout>
</LinearLayout>